--- a/app/company.html
+++ b/app/company.html
@@ -693,8 +693,8 @@
 	<section class="news-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Новости компании «Лето-Групп»</h2>
-			<ul class="news-list" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
-				<li class="item">
+			<ul class="news-list uk-grid uk-child-width-1-3@m uk-child-width-1-2@s" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+				<li class="news-item">
 					<article>
 						<header>
 							<figure>
@@ -714,7 +714,7 @@
 						</section>
 					</article>
 				</li>
-				<li class="item">
+				<li class="news-item">
 					<article>
 						<header>
 							<figure>
@@ -734,7 +734,7 @@
 						</section>
 					</article>
 				</li>
-				<li class="item">
+				<li class="news-item">
 					<article>
 						<header>
 							<figure>
