--- a/app/contacts.html
+++ b/app/contacts.html
@@ -372,6 +372,7 @@
 <script src="libs/ofi.min.js" defer></script>
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
+<script src="js/flybox.js" defer></script>
 <script src="js/main.js" defer></script>
 
 
