--- a/app/index.html
+++ b/app/index.html
@@ -132,7 +132,6 @@
 
 	
 
-
 	
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
@@ -158,7 +157,6 @@
 			
 		</div>
 	</div>
-
 		<section class="advantages-section">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
@@ -275,7 +273,6 @@
 			</div>
 		</div>
 	</section>
-
 	
 
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
@@ -365,7 +362,6 @@
 
 
 
-
 	
 
 	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
@@ -437,7 +433,6 @@
 
 
 
-
 		<!-- begin brands-slider -->
 	<div class="brands-slider preload">
 		<h2 class="uk-text-center">Купить онлайн</h2>
@@ -464,7 +459,6 @@
 		</div>
 	</div>
 	<!-- end  brands-slider -->
-
 	
 <section class="time-section">
 	<div class="uk-container uk-container--small">
@@ -661,7 +655,6 @@
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все рецепты</span></a>
 	</div>
 </section>
-
 	
 <section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 	<div class="uk-container uk-container--small">
@@ -701,7 +694,6 @@
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все факты о яйце</span></a>
 	</div>
 </section>
-
 
 
 <!-- begin footer -->
@@ -827,6 +819,7 @@
 <script src="libs/ofi.min.js" defer></script>
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
+<script src="js/flybox.js" defer></script>
 <script src="js/main.js" defer></script>
 
 
