--- a/app/contacts.html
+++ b/app/contacts.html
@@ -97,7 +97,7 @@
 			</li>
 			<li>
 				<span class="logo1">
-					<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
+					<a href="/"><img src="img/media/logo.svg" alt="Leto"></a>
 				</span>
 			</li>
 			<li>
@@ -159,6 +159,68 @@
 								<a href="mailto:info@leto-group.ru" class="green-link green-link--large">info@leto-group.ru</a>
 							</div>
 
+
+						</div>
+						<div class="uk-width-1-2@s">
+							<div class="contacts-form-wrapper">
+								<img class="ellipse-abs-1 uk-visible@l" src="img/icon-svg/large-ellipse-3.svg" alt="">
+								<img class="ellipse-abs-2 uk-visible@l" src="img/icon-svg/large-ellipse-4.svg" alt="">
+
+								<form action="" class="custom-form contacts-form">
+									<div class="form-title">Заполните форму</div>
+									<fieldset>
+										<input type="text" placeholder="Ваше имя">
+									</fieldset>
+									<fieldset>
+										<input type="text" class="js__input-phone" placeholder="Номер телефона">
+									</fieldset>
+									<fieldset>
+										<textarea name="" id="" placeholder="Сообщение"></textarea>
+									</fieldset>
+									<fieldset>
+										<div class="uk-grid">
+											<div class="uk-width-1-2@s">
+												<label for="contacts-call" class="custom-form-element-wrapper uk-flex uk-flex-middle uk-flex-left">
+													<input id="contacts-call" type="checkbox" checked>
+													<span class="custom-checkbox"></span>
+													<span class="custom-label">Перезвоните мне</span>
+												</label>
+
+											</div>
+											<div class="uk-width-1-2@s">
+												<label for="contacts-file" class="custom-form-element-wrapper uk-flex uk-flex-middle uk-flex-wrap uk-flex-right@s">
+													<input id="contacts-file" type="file">
+													<span class="custom-file"></span>
+													<span class="custom-label custom-label--green">Прикрепить файл</span>
+													<div class="file-name"></div>
+												</label>
+											</div>
+										</div>
+									</fieldset>
+									<button type="submit" class="btn btn--yellow"><span>Отправить</span></button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="uk-grid">
+						<div class="uk-width-1-2@s">
+							<div class="slogan">
+								<p>
+									Нам интересно сотрудничество с надежными компаниями, соблюдающими сроки и договоренности в сфере производства и/или поставок:- сельскохозяйственной продукции (зерно, кукуруза, шрот) - бумажной продукции для упаковки яиц - средств индивидуальной защиты и дезинфекции.
+								</p>
+								<p>
+									В сферу наших интересов, помимо непосредственно производственных, вкходят компании, предоставляющие маркетинговые, финансовые и консалтинговые услуги.
+								</p>
+							</div>
+
+							<div class="contacts">
+								<a href="tel:+74957815404" class="contacts__tel contacts__tel--large">+7 495 781-54-04</a>
+								<div class="subtitle">Напишите нам:</div>
+								<a href="mailto:info@leto-group.ru" class="green-link green-link--large">info@leto-group.ru</a>
+							</div>
+
 							<a href="" class="btn"><span>презентация компании</span></a>
 
 						</div>
@@ -204,8 +266,64 @@
 						</div>
 					</div>
 				</li>
-				<li>gerg</li>
-				<li>gffef3erg</li>
+				<li>
+					<div class="uk-grid">
+						<div class="uk-width-1-2@s">
+							<div class="slogan">
+								Нам важно, чтобы потребители могли купить нашу продукцию в привычном магазине. Поэтому мы заинтересованы в сотрудничестве с большими и маленькими сетями и даже отдельным магазинами. Свяжитесь с нами через форму обратной связи, почту или по телефону. 
+							</div>
+
+							<div class="contacts">
+								<a href="tel:+74957815404" class="contacts__tel contacts__tel--large">+7 495 781-54-04</a>
+								<div class="subtitle">Напишите нам:</div>
+								<a href="mailto:info@leto-group.ru" class="green-link green-link--large">info@leto-group.ru</a>
+							</div>
+
+							<a href="" class="btn"><span>презентация компании</span></a>
+
+						</div>
+						<div class="uk-width-1-2@s">
+							<div class="contacts-form-wrapper">
+								<img class="ellipse-abs-1 uk-visible@l" src="img/icon-svg/large-ellipse-3.svg" alt="">
+								<img class="ellipse-abs-2 uk-visible@l" src="img/icon-svg/large-ellipse-4.svg" alt="">
+
+								<form action="" class="custom-form contacts-form">
+									<div class="form-title">Заполните форму</div>
+									<fieldset>
+										<input type="text" placeholder="Ваше имя">
+									</fieldset>
+									<fieldset>
+										<input type="text" class="js__input-phone" placeholder="Номер телефона">
+									</fieldset>
+									<fieldset>
+										<textarea name="" id="" placeholder="Сообщение"></textarea>
+									</fieldset>
+									<fieldset>
+										<div class="uk-grid">
+											<div class="uk-width-1-2@s">
+												<label for="contacts-call" class="custom-form-element-wrapper uk-flex uk-flex-middle uk-flex-left">
+													<input id="contacts-call" type="checkbox" checked>
+													<span class="custom-checkbox"></span>
+													<span class="custom-label">Перезвоните мне</span>
+												</label>
+
+											</div>
+											<div class="uk-width-1-2@s">
+												<label for="contacts-file" class="custom-form-element-wrapper uk-flex uk-flex-middle uk-flex-wrap uk-flex-right@s">
+													<input id="contacts-file" type="file">
+													<span class="custom-file"></span>
+													<span class="custom-label custom-label--green">Прикрепить файл</span>
+													<div class="file-name"></div>
+												</label>
+											</div>
+										</div>
+									</fieldset>
+									<button type="submit" class="btn btn--yellow"><span>Отправить</span></button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</li>
 			</ul>
 		</div><!-- end custom-tabs -->
 
@@ -232,16 +350,22 @@
 			<ul class="tab-sw" uk-switcher="swiping: false">
 				<li class="active"><a href="">Москва</a></li>
 				<li><a href="">Белгород</a></li>
-				<li><a href="">Тела</a></li>
+				<li><a href="">Тула</a></li>
 			</ul>
 
 			<ul class="uk-switcher">
 				<li>
 					<div class="slogan uk-text-center">Московская обл., БЦ Рига Ленд, корпус 6, подъезд 5, офис № 207</div>
-					<img src="img/media/address-img-1.png" alt="">
+					<img src="img/media/test1.jpg" alt="">
 				</li>
-				<li>gerg</li>
-				<li>gffef3erg</li>
+				<li>
+					<div class="slogan uk-text-center">Белгородская обл., Шебекинский р-н, с. Белянка, ул. Комсомольская, д.57</div>
+					<img src="img/media/test2.jpg" alt="">
+				</li>
+				<li>
+					<div class="slogan uk-text-center">Тульская область, Заокский р-н, пос. Сосновый</div>
+					<img src="img/media/test3.jpg" alt="">
+				</li>
 			</ul>
 		</div><!-- end custom-tabs -->
 	</div>
@@ -365,10 +489,10 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
-<script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
-<script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
+<script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
+<script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/ofi.min.js" defer></script>
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
