--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
 			</li>
 			<li>
 				<span class="logo1">
-					<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
+					<a href="/"><img src="img/media/logo.svg" alt="Leto"></a>
 				</span>
 			</li>
 			<li>
@@ -812,10 +812,10 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
-<script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
-<script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
+<script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
+<script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/ofi.min.js" defer></script>
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
