--- a/app/company.html
+++ b/app/company.html
@@ -97,7 +97,7 @@
 			</li>
 			<li>
 				<span class="logo1">
-					<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
+					<a href="/"><img src="img/media/logo.svg" alt="Leto"></a>
 				</span>
 			</li>
 			<li>
@@ -228,10 +228,16 @@
 	</section><!-- end total-section -->
 
 	<!-- begin about-egg -->
-	<section class="about-egg uk-text-center" uk-scrollspy="cls: slide-up;">
+	<section class="about-egg uk-text-center" uk-scrollspy="cls: slide-up show;">
 		<div class="uk-container">
 			<div class="about-egg__img">
-				<img src="img/media/egg-2.png" alt="">
+				<svg width="100%" height="100%" class="yellow-ellipse-3">
+				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+				</svg>
+				<svg width="100%" height="100%" class="yellow-ellipse-4">
+				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+				</svg>
+				<img src="img/media/egg.png" alt="">
 			</div>
 			<div class="about-egg__text">
 				<p>
@@ -306,7 +312,7 @@
 
 	<section class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
-			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Потребитель нам важнее всего</h2>
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Заботимся о наших покупателях</h2>
 
 			<ul class="typebox-list mask" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 
@@ -335,7 +341,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-13.png" alt="" uk-img>
+							<img data-src="img/media/box-type-15.jpg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -352,7 +358,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-14.png" alt="" uk-img>
+							<img data-src="img/media/box-type-16.jpg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -692,7 +698,7 @@
 	<!-- begin news-section -->
 	<section class="news-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
-			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Новости компании «Лето-Групп»</h2>
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Наши новости</h2>
 			<ul class="news-list uk-grid uk-child-width-1-3@m uk-child-width-1-2@s" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 				<li class="news-item">
 					<article>
@@ -878,10 +884,10 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
-<script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
-<script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
+<script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
+<script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/ofi.min.js" defer></script>
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
