страница об угодьях

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -79,7 +79,7 @@
 <nav class="nav">
 	<div class="uk-container">
 		<ul class="main-nav">
-			<li class="active">
+			<li>
 				<a href="#">
 					<svg width="82px" height="59px" class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-1"></use>
@@ -354,17 +354,17 @@
 			</ul>
 
 			<ul class="uk-switcher">
-				<li>
+				<li data-img="img/media/moscow-pin.png">
 					<div class="slogan uk-text-center">Московская обл., БЦ Рига Ленд, корпус 6, подъезд 5, офис № 207</div>
-					<img src="img/media/test1.jpg" alt="">
+					<!-- <img src="img/media/test1.jpg" alt=""> -->
 				</li>
-				<li>
+				<li data-img="img/media/belgorod-pin.png">
 					<div class="slogan uk-text-center">Белгородская обл., Шебекинский р-н, с. Белянка, ул. Комсомольская, д.57</div>
-					<img src="img/media/test2.jpg" alt="">
+					<!-- <img src="img/media/test2.jpg" alt=""> -->
 				</li>
-				<li>
+				<li data-img="img/media/tula2.png">
 					<div class="slogan uk-text-center">Тульская область, Заокский р-н, пос. Сосновый</div>
-					<img src="img/media/test3.jpg" alt="">
+					<!-- <img src="img/media/test3.jpg" alt=""> -->
 				</li>
 			</ul>
 		</div><!-- end custom-tabs -->
