--- a/app/ugodie.html
+++ b/app/ugodie.html
@@ -23,7 +23,7 @@
 	<![endif]-->
 </head>
 
-<body class="theme-green">
+<body class="theme-blue">
 
 <!-- begin header -->
 <header class="header">
@@ -136,15 +136,15 @@
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
 
-			<div class="main-banner__img" style="background-image: url(img/media/main-banner-1-1440x730.png)" uk-scrollspy="cls:border-anim">
+			<div class="main-banner__img" style="background-image: url(img/media/main-banner-3-1440x730.png)" uk-scrollspy="cls:border-anim">
 			</div>
 
 			<div class="main-banner__text">
 				<div class="main-banner__title">
-					<h1 uk-scrollspy="cls:slide-up">Натуральный продукт</h1>
+					<h1 uk-scrollspy="cls:slide-up">Когда качество имеет размер!</h1>
 				</div>
 				<div class="main-banner__subtitle">
-					для всей семьи
+					для силы и здоровья
 				</div>
 				<svg width="29px" height="67px" class="main-banner__arrow-down">
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
@@ -152,7 +152,7 @@
 			</div>
 			
 			<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img src="img/media/egg-box-1.png" alt="Лето">
+				<img src="img/media/egg-box-2.png" alt="Лето">
 			</div>
 			
 		</div>
