добавил странциы угодия и junior

--- a/app/index.html
+++ b/app/index.html
@@ -157,10 +157,11 @@
 			
 		</div>
 	</div>
-		<section class="advantages-section">
+	
+		<section class="advantages-section ">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
-				<ul class="advantages-list">
+				<ul class="advantages-list advantages-list--six-items">
 					<li>
 						<div class="advantage-item">
 							<div class="advantage-item__img">
@@ -275,6 +276,8 @@
 	</section>
 	
 
+	
+		
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 	<div class="uk-container">
 		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Удобно нести и хранить</h2>
@@ -358,12 +361,7 @@
 
 
 
-
-
-
-
 	
-
 	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
@@ -425,10 +423,6 @@
 
 		</div>
 	</div>
-
-
-
-
 
 
 
