--- a/app/junior.html
+++ b/app/junior.html
@@ -23,7 +23,7 @@
 	<![endif]-->
 </head>
 
-<body class="theme-blue">
+<body class="theme-pink">
 
 <!-- begin header -->
 <header class="header">
@@ -136,15 +136,15 @@
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
 
-			<div class="main-banner__img" style="background-image: url(img/media/main-banner-3-1440x730.png)" uk-scrollspy="cls:border-anim">
+			<div class="main-banner__img" style="background-image: url(img/media/main-banner-4-1440x730.png)" uk-scrollspy="cls:border-anim">
 			</div>
 
 			<div class="main-banner__text">
 				<div class="main-banner__title">
-					<h1 uk-scrollspy="cls:slide-up">Когда качество имеет размер!</h1>
+					<h1 uk-scrollspy="cls:slide-up">Для самых активных людей</h1>
 				</div>
 				<div class="main-banner__subtitle">
-					для силы и здоровья
+					на планете
 				</div>
 				<svg width="29px" height="67px" class="main-banner__arrow-down">
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
@@ -152,7 +152,7 @@
 			</div>
 			
 			<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img src="img/media/egg-box-2.png" alt="Лето">
+				<img src="img/media/egg-box-3.png" alt="Лето">
 			</div>
 			
 		</div>
@@ -160,20 +160,21 @@
 	
 	
 
-		<section class="advantages-section advantages-section--blue">
+	
+		<section class="advantages-section advantages-section--pink">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
-				<ul class="advantages-list advantages-list--four-items">
+				<ul class="advantages-list advantages-list--five-items">
 					<li>
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-15.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-19.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Самое большое содержание белка</div>
+								<div class="title-h3">Максимум пользы при небольшом размере</div>
 							</div>
 						</div>
 					</li>
@@ -183,10 +184,10 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-16.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-20.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Натурально и вкусно как в деревне</div>
+								<div class="title-h3">Яйца только от самых молодых и активных курочек (С2)</div>
 							</div>
 						</div>
 					</li>
@@ -196,10 +197,10 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-17.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-21.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Выбор мужской аудитории по исследованиям потребителей</div>
+								<div class="title-h3">Лучше всего подходит в кулинарии, поскольку эффективнее взбивается и держит форму</div>
 							</div>
 						</div>
 					</li>
@@ -209,13 +210,26 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-18.svg" alt="" uk-img>
+								<img data-src="img/media/advantage-img/advantage-img-22.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Только самые крупные яйца используются в производстве марки (СО и С1)</div>
+								<div class="title-h3">ТКуры несушки High-line Brown</div>
 							</div>
 						</div>
 					</li>  
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-23.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Любимые персонажи на упаковке</div>
+							</div>
+						</div>
+					</li> 
 				</ul>
 				<div class="center-box">
 					<svg width="100%" height="100%" class="yellow-ellipse-1">
@@ -224,16 +238,16 @@
 					<svg width="100%" height="100%" class="yellow-ellipse-2">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
 					</svg>
-					<img src="img/media/advantage-img/egg-blue.png" alt="">
+					<img src="img/media/advantage-img/egg-pink.png" alt="">
 				</div>
 			</div>
 		</div>
 	</section>
-	
 		
+
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 	<div class="uk-container">
-		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Упаковка</h2>
 		<ul class="advantages-h-list advantages-h-list--three-items">
 			<li class="item">
 				<div class="item__img">
@@ -243,13 +257,13 @@
 						</svg>
 					</div>
 					<div class="content-img">
-						<svg width="80px" height="93px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-1"></use>
+						<svg width="80px" height="81px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-2"></use>
 						</svg>
 					</div>
 				</div>
 				<div class="item__text">
-					Прочная упаковка выдержит кастрюлю, поставленную сверху
+					Экологичная упаковка из переработанной бумаги
 				</div>
 			</li>
 
@@ -261,13 +275,11 @@
 						</svg>
 					</div>
 					<div class="content-img">
-						<svg width="80px" height="63px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-8"></use>
-						</svg>
+						<img src="img/icon-svg/adv-icon-10.svg" alt="">
 					</div>
 				</div>
 				<div class="item__text">
-					Cпециальная упаковка для особо крупных яиц (СВ)
+					Яркая красочная упаковка
 				</div>
 			</li>
 
@@ -279,13 +291,13 @@
 						</svg>
 					</div>
 					<div class="content-img">
-						<svg width="97px" height="80px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-9"></use>
+						<svg width="80px" height="97px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-4"></use>
 						</svg>
 					</div>
 				</div>
 				<div class="item__text">
-					Упаковка повышенной прочности для яиц большого размера
+					Защита от случайных падений
 				</div>
 			</li>
 		</ul>
@@ -293,8 +305,8 @@
 </div>
 
 
-
 	
+
 	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
@@ -309,11 +321,11 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-4.png" alt="" uk-img>
+							<img data-src="img/media/box-type-17.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Крупные, насколько это только возможно!</div>
+						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
 						<div class="item__subtitle">10 яиц СВ (75+ грамм)</div>
 					</div>
 				</li>
@@ -322,16 +334,16 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-5.png" alt="" uk-img>
+							<img data-src="img/media/box-type-7.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Большие и натуральные</div>
-						<div class="item__subtitle">10 яиц СО (65-74,9 грамм)</div>
+						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
+						<div class="item__subtitle">15 яиц С2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -339,24 +351,22 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-6.png" alt="" uk-img>
+							<img data-src="img/media/box-type-18.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Еще больше в одной упаковке</div>
-						<div class="item__subtitle">15 яиц СО (65-74,9 грамм) </div>
+						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
+						<div class="item__subtitle">15 яиц СО (65-74,9 грамм)</div>
 					</div>
 				</li>
-
 			</ul>
 
 		</div>
 	</div>
-
 
 		<!-- begin brands-slider -->
 	<div class="brands-slider preload">
