--- a/app/company.html
+++ b/app/company.html
@@ -80,7 +80,7 @@
 	<div class="uk-container">
 		<ul class="main-nav">
 			<li>
-				<a href="#">
+				<a href="/">
 					<svg width="82px" height="59px" class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-1"></use>
 					</svg>
@@ -88,7 +88,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="ugodie.html">
 					<svg width="233px" height="71px" class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-2"></use>
 					</svg>
@@ -101,7 +101,7 @@
 				</span>
 			</li>
 			<li>
-				<a href="#">
+				<a href="junior.html">
 					<svg class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-3"></use>
 					</svg>
@@ -109,7 +109,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="nov.html">
 					<svg class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-4"></use>
 					</svg>
@@ -136,9 +136,14 @@
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
 
-			<div class="main-banner__img" style="background-image: url(img/media/main-banner-2-1440x730.png)" uk-scrollspy="cls:border-anim">
+			<div class="main-banner__img"  uk-scrollspy="cls:border-anim">
+				<picture>
+					<source srcset="img/media/main-banner-2-1440x730.png" media="(min-width: 961px)">
+					<source srcset="img/media/main-banner-2-960x487-tablet.png" media="(min-width: 641px) and (max-width: 960px)">
+					<source srcset="img/media/main-banner-2-640x325-mob-xs.png" media="(max-width: 640px)">
+					<img src="img/media/main-banner-2-1440x730.png" alt="">
+				</picture>
 			</div>
-
 			<div class="main-banner__text">
 				<div class="main-banner__title">
 					<h1 uk-scrollspy="cls:slide-up">Группа компаний «Лето»</h1>
@@ -150,8 +155,7 @@
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
 				</svg>
 			</div>
-			
-		</div>
+					</div>
 	</div>
 
 	<!-- begin total-section -->
@@ -241,11 +245,8 @@
 			</div>
 			<div class="about-egg__text">
 				<p>
-					Яйцо — один из немногих продуктов, остающийся неизменным 
-					в потреблении человеком на протяжении тысячелетий.
-				</p>
-				<p>
-					Миссия нашей компании — бережно сохранять и нести людям ценность этого натурального продукта
+					Миссия нашей компании — бережно сохранять и нести людям ценность яйца, которое остаётся неизменным в потреблении
+					 человеком на протяжении тысячелетий.
 				</p>
 			</div>
 		</div>
@@ -393,7 +394,10 @@
 							<img src="img/media/sliders/slider-company-1.png" alt="">
 						</div>
 						<div class="slide">
-							<img src="img/media/sliders/composition-slide.svg" alt="Состав яйца">
+							<img src="img/media/sliders/slider-company-2.jpg" alt="">
+						</div>
+						<div class="slide">
+							<img src="img/media/sliders/slider-company-3.jpg" alt="">
 						</div>
 					</div>
 					<div class="slider__arrows">
@@ -515,7 +519,7 @@
 										<div class="brands-grid">
 											<div class="row">
 												<img src="img/media/brands/okey.jpg" alt="">
-												<img src="img/media/brands/karusel.png" alt="">
+												<img src="img/media/brands/karusel.webp" alt="">
 											</div>
 											<div class="row">
 												<img src="img/media/brands/perekrestok.png" alt="">
@@ -543,7 +547,7 @@
 										<div class="brands-grid">
 											<div class="row">
 												<img src="img/media/brands/okey.jpg" alt="">
-												<img src="img/media/brands/karusel.png" alt="">
+												<img src="img/media/brands/karusel.webp" alt="">
 											</div>
 											<div class="row">
 												<img src="img/media/brands/perekrestok.png" alt="">
@@ -571,7 +575,7 @@
 										<div class="brands-grid">
 											<div class="row">
 												<img src="img/media/brands/okey.jpg" alt="">
-												<img src="img/media/brands/karusel.png" alt="">
+												<img src="img/media/brands/karusel.webp" alt="">
 											</div>
 											<div class="row">
 												<img src="img/media/brands/perekrestok.png" alt="">
