--- a/app/news.html
+++ b/app/news.html
@@ -80,7 +80,7 @@
 	<div class="uk-container">
 		<ul class="main-nav">
 			<li>
-				<a href="#">
+				<a href="/">
 					<svg width="82px" height="59px" class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-1"></use>
 					</svg>
@@ -88,7 +88,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="ugodie.html">
 					<svg width="233px" height="71px" class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-2"></use>
 					</svg>
@@ -101,7 +101,7 @@
 				</span>
 			</li>
 			<li>
-				<a href="#">
+				<a href="junior.html">
 					<svg class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-3"></use>
 					</svg>
@@ -109,7 +109,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="nov.html">
 					<svg class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-4"></use>
 					</svg>
